--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -11,6 +11,7 @@
 body {
   font-family: $content-font;
   background: $white;
+  overflow-x: hidden;
 }
 
 a {
@@ -147,23 +148,85 @@ header {
       margin-bottom: 2rem;
     }
     &--has-text {
-      min-height: 37.8rem;
+      min-height: 35rem;
       justify-content: flex-end;
-      background-size: contain;
+      background-size: cover;
       background-position-y: top;
       .title-text {
         margin-top: 1rem;
         font-size: 2rem;
       }
       .body-text {
-        color: $dark-high-des-blue;
         margin: 0;
         font-size: 0.9rem;
         line-height: 1.5rem;
+      }
+      &.graph-color {
+        .title-text,
+        .body-text {
+          color: $primary-graph-color !important;
+        }
+      }
+      &.photo-color {
+        .title-text,
+        .body-text {
+          color: $primary-photo-color !important;
+        }
       }
     }
   }
 }
 /* Grid Section End */
+
+/* Testimonial Section Start */
+.testimonial-section {
+  padding: 4rem 1.5rem;
+  &__card {
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+  &__head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1rem 0 2.5rem;
+    img {
+      height: 4rem;
+      width: 4rem;
+      object-fit: cover;
+      overflow: hidden;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+    }
+  }
+  &__text {
+    color: $grey-blue;
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+  &__meta {
+    margin-top: 2.5rem;
+    &--name {
+      font-size: 1.4rem;
+      font-family: $header-font;
+    }
+    &--position {
+      color: $grey-blue;
+      font-size: 0.8rem;
+    }
+  }
+}
+.section-title {
+  color: $grey-blue;
+  display: block;
+  text-align: center;
+  margin-bottom: 3rem;
+  text-transform: uppercase;
+}
+/* Testimonial Section End */
 
 @import "mentorfooter";
