--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -6,9 +6,9 @@ $header-font: "Fraunces", serif;
 $primary-blue: #3dbeff;
 $primary-red: #fe7867;
 $primary-yellow: #fad400;
-$primary-graph-color: #25564b;
+$primary-graph-color: #297261;
 $primary-photo-color: #19536b;
-$primary-footer: #458c7e;
+$primary-footer: #90d4c5;
 
 // Neutral
 $dark-high-des-blue: #23303e;
