--- a/assets/style/_mentorfooter.scss
+++ b/assets/style/_mentorfooter.scss
@@ -1,8 +1,9 @@
 /*Mentor Colors*/
 .attribution {
-  font-size: 11px;
+  font-size: 0.8rem;
   text-align: center;
+  padding: 0.8rem 0.5rem;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: #3e52a3;
 }
