--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
-.row {
+.row, .footer-image-section {
   display: flex;
   flex-wrap: wrap;
   margin-left: -15px;
@@ -141,7 +141,7 @@ h6 {
 /* Navigation Start */
 header {
   background: #3dbeff;
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem;
   height: 30rem;
 }
 
@@ -151,11 +151,6 @@ header nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-}
-
-header nav .site-name {
-  font-size: 1.5rem;
-  color: #ffffff;
 }
 
 header nav .main-menu {
@@ -217,7 +212,7 @@ header .hero-section__title {
 
 header .hero-section__icon {
   position: absolute;
-  top: 13.5rem;
+  top: 13rem;
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
@@ -272,7 +267,7 @@ header .hero-section__icon {
 
 .grid-section__item--has-text.graph-color .title-text,
 .grid-section__item--has-text.graph-color .body-text {
-  color: #25564b !important;
+  color: #297261 !important;
 }
 
 .grid-section__item--has-text.photo-color .title-text,
@@ -312,7 +307,7 @@ header .hero-section__icon {
 }
 
 .testimonial-section__text {
-  color: #a7abae;
+  color: #5a636c;
   font-size: 1.2rem;
   line-height: 1.8rem;
 }
@@ -340,10 +335,233 @@ header .hero-section__icon {
 }
 
 /* Testimonial Section End */
+/* Footer Image Start */
+.footer-image-section {
+  margin: 0;
+}
+
+.footer-image-section__item {
+  flex: 0 0 50%;
+  height: 12rem;
+}
+
+/* Footer Image End */
+/* Footer Start */
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #90d4c5;
+  padding: 3rem 0;
+}
+
+.footer__site-name {
+  margin-bottom: 2rem;
+}
+
+.footer__site-name img {
+  width: 10rem;
+}
+
+.footer__menu, .footer__social {
+  display: flex;
+  align-self: center;
+  width: 100%;
+}
+
+.footer__menu {
+  margin-bottom: 5rem;
+  justify-content: space-evenly;
+}
+
+.footer__menu--link {
+  color: #369881;
+  font-size: 1.2rem;
+}
+
+.footer__social {
+  justify-content: center;
+}
+
+.footer__social li:not(:last-child) {
+  margin-right: 2rem;
+}
+
+/* Footer End */
+@media screen and (min-width: 48rem) {
+  .order-1 {
+    order: 1 !important;
+  }
+  .order-2 {
+    order: 2 !important;
+  }
+  .col-md-4 {
+    flex: 0 0 33.33%;
+    padding: 0 15px;
+  }
+  header {
+    height: 50rem;
+  }
+  header .mobile-toggle {
+    display: none;
+  }
+  header nav .main-menu {
+    position: relative;
+    opacity: 1;
+    background: transparent;
+    top: 0;
+    display: flex;
+    align-items: center;
+    width: auto;
+    color: #ffffff;
+    pointer-events: all;
+  }
+  header nav .main-menu::before {
+    display: none;
+  }
+  header nav .main-menu li {
+    padding: 0;
+  }
+  header nav .main-menu li .nav-link {
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+  }
+  header nav .main-menu li .nav-link:not(.btn) {
+    color: #ffffff;
+    margin-right: 0.8rem;
+    padding: 0.5rem 1.5rem;
+  }
+  header nav .main-menu li .nav-link:hover {
+    background: rgba(255, 255, 255, 0.2);
+  }
+  header .hero-section__icon {
+    top: 14rem;
+  }
+  .btn__nav {
+    background: #ffffff;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+  }
+  .btn__nav:hover {
+    background: rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+  }
+  .grid-section__item {
+    flex: 0 0 50%;
+    min-height: 40rem;
+  }
+  .grid-section__item:not(:nth-last-child(-n + 2)) {
+    text-align: left;
+  }
+  .grid-section__item:not(:nth-last-child(-n + 2)) .title-text {
+    margin-bottom: 2rem;
+    margin-right: auto;
+  }
+  .grid-section__item:nth-child(1) {
+    order: 2;
+  }
+  .grid-section__item:nth-child(2) {
+    order: 1;
+  }
+  .grid-section__item:nth-child(3) {
+    order: 3;
+  }
+  .grid-section__item:nth-child(4) {
+    order: 3;
+  }
+  .grid-section__item:nth-child(5) {
+    order: 3;
+  }
+  .grid-section__item:nth-child(6) {
+    order: 3;
+  }
+  .grid-section__item .title-text,
+  .grid-section__item .body-text {
+    padding: 0 6rem;
+  }
+  .grid-section__item .body-text {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+  .grid-section__item .btn {
+    margin: 0 auto 0 6rem;
+  }
+  .testimonial-section {
+    padding: 4rem 6rem;
+  }
+  .testimonial-section__text {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
+  .testimonial-section__meta {
+    margin-top: 2.2rem;
+  }
+  .testimonial-section__meta--name {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+  }
+  .testimonial-section__meta--position {
+    font-size: 1rem;
+  }
+  .footer-image-section__item {
+    flex: 0 0 25%;
+    height: 35rem;
+  }
+  .footer__menu {
+    justify-content: center;
+  }
+  .footer__menu li:not(:last-child) {
+    margin-right: 2rem;
+  }
+  .footer__menu--link {
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+  }
+  .footer__menu--link:hover {
+    color: #ffffff;
+  }
+  .footer__social--link img {
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+  }
+  .footer__social--link:hover img {
+    filter: brightness(0) invert(1);
+    -webkit-filter: brightness(0) invert(1);
+  }
+}
+
+@media screen and (min-width: 28.1rem) {
+  .grid-section__item {
+    min-height: 40rem;
+  }
+  .footer-image-section__item {
+    height: 22rem;
+  }
+}
+
 /*Mentor Colors*/
 .attribution {
-  font-size: 11px;
+  font-size: 0.8rem;
   text-align: center;
+  padding: 0.8rem 0.5rem;
 }
 
 .attribution a {
