--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
 
-@import "variables", "flexgrid", "utils";
+@import "variables", "flexgrid", "common";
 
 * {
   margin: 0;
@@ -47,7 +47,7 @@ h6 {
 /* Navigation Start */
 header {
   background: $primary-blue;
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem;
   height: 30rem;
   nav {
     position: relative;
@@ -55,10 +55,6 @@ header {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    .site-name {
-      font-size: 1.5rem;
-      color: $white;
-    }
     .main-menu {
       position: absolute;
       width: 100%;
@@ -113,7 +109,7 @@ header {
     }
     &__icon {
       position: absolute;
-      top: 13.5rem;
+      top: 13rem;
       left: 50%;
       transform: translateX(-50%);
       -webkit-transform: translateX(-50%);
@@ -204,7 +200,7 @@ header {
     }
   }
   &__text {
-    color: $grey-blue;
+    color: $dark-high-grey-blue;
     font-size: 1.2rem;
     line-height: 1.8rem;
   }
@@ -229,4 +225,52 @@ header {
 }
 /* Testimonial Section End */
 
-@import "mentorfooter";
+/* Footer Image Start */
+.footer-image-section {
+  @extend .row;
+  margin: 0;
+  &__item {
+    flex: 0 0 50%;
+    height: 12rem;
+  }
+}
+/* Footer Image End */
+
+/* Footer Start */
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $primary-footer;
+  padding: 3rem 0;
+  &__site-name {
+    margin-bottom: 2rem;
+    img {
+      width: 10rem;
+    }
+  }
+  &__menu,
+  &__social {
+    display: flex;
+    align-self: center;
+    width: 100%;
+  }
+  &__menu {
+    margin-bottom: 5rem;
+    justify-content: space-evenly;
+    &--link {
+      color: lighten($primary-graph-color, 10%);
+      font-size: 1.2rem;
+    }
+  }
+  &__social {
+    justify-content: center;
+    li:not(:last-child) {
+      margin-right: 2rem;
+    }
+  }
+}
+/* Footer End */
+
+@import "responsive", "mentorfooter";
